PR/49328: Uwe Toenjes: This driver allocates memory always with NOWAIT, except in the NetBSD-specific code. This happens from ioctl, and usually there is enough memory there since we just freed our resources and we are getting them back. We could even check and not do it again if sizes did not change, but this is how the rest of the code is structured so we follow suit. XXX: pullup-7